# RLDX-1

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  fix_robosuite_log_path.sh  pixi.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-release.yml
docs/: architecture.md  embodiment_tags.md  evaluation.md  inference_server.md  installation.md  training.md
getting_started/: 01_quickstart.ipynb  02_dataset_preparation.ipynb  03_finetuning.ipynb  04_inference_server.ipynb  05_module_guide.ipynb  README.md
rldx/: __init__.py
rldx/configs/: base_config.py  train_config.py
rldx/configs/data/: calvin_config.py  data_config.py  dataset_mix.py  droid_with_tactile_torque_config.py  embodiment_configs.py  gr1_config.py  libero_config.py  midtrain_allex_data_config.py  midtrain_allex_data_config_stereo.py  openarm_inspire_config.py  pt_data_config.py  robocasa365_config.py  robocasa_config.py  robocasa_real_config.py  robotwin_config.py  simpler_google_config.py  simpler_widowx_config.py
rldx/configs/model/: __init__.py  rldx.py
rldx/configs/training/: training_config.py
rldx/data/: augmentations.py  embodiment_tags.py  interfaces.py  stats.py  types.py  utils.py
rldx/data/collator/: collators.py
rldx/data/dataset/: factory.py  lerobot_episode_loader.py  sharded_mixture_dataset.py  sharded_single_step_dataset.py  standard_mixture_dataset.py  standard_single_step_dataset.py
rldx/data/state_action/: action_chunking.py  pose.py  state_action_processor.py
rldx/eval/: open_loop_eval.py  rollout_policy.py  run_rldx_server.py  run_rldx_server_pi.py
rldx/eval/real_robot/SO100/: eval_so100.py
rldx/eval/serving/: websocket_policy_server.py
rldx/eval/sim/: _bench_env.sh  env_utils.py
rldx/eval/sim/BEHAVIOR/: behavior_env.py  og_teleop_utils.py
rldx/eval/sim/CALVIN/: eval_taskwise.py  setup_calvin.sh
rldx/eval/sim/GR00T-WholeBodyControl/: setup_GR00T_WholeBodyControl.sh
rldx/eval/sim/LIBERO/: libero_env.py  setup_libero.sh
rldx/eval/sim/LIBERO_PLUS/: libero_plus_env.py  setup_libero_plus.sh
rldx/eval/sim/SimplerEnv/: setup_SimplerEnv.sh  simpler_env.py
rldx/eval/sim/robocasa/: setup_RoboCasa.sh
rldx/eval/sim/robocasa-gr1-tabletop-tasks/: setup_RoboCasaGR1TabletopTasks.sh
rldx/eval/sim/robocasa365/: setup_RoboCasa365.sh
rldx/eval/sim/wrapper/: multistep_wrapper.py  video_recording_wrapper.py
rldx/experiment/: assembly.py  dist_utils.py  experiment.py  launch_train.py  trainer.py  utils.py
rldx/experiment/features/: __init__.py  context.py  memory.py  motion.py  physics.py  video.py
rldx/inference/: README.md  __init__.py  _path.py  _rtc_dispatch.py  benchmark_vla.py  serve_optimization.py
rldx/inference/action_model/: README.md  benchmark_action_model.py
rldx/inference/action_model/engine/: __init__.py  cuda_graph.py  custom_action_model_chain.py  custom_expanded_action_model_chain.py  custom_expanded_msat_chain.py  custom_msat_chain.py  torch_inductor.py
rldx/inference/backbone/: README.md  benchmark_backbone.py
rldx/inference/engine/: cuda_graph.py  custom_vla_chain.py  torch_inductor.py
rldx/inference/memory/: benchmark_memory.py
rldx/inference/model/: graph_safe_vla.py
rldx/inference/utils/: __init__.py  correctness.py  input_generator.py  loader.py  registry.py  timing.py
rldx/model/: __init__.py  pipeline.py  registry.py
rldx/model/core/: processing_rldx.py  rldx.py  setup.py
rldx/model/modules/: __init__.py  embodiment_conditioned_mlp.py  memory.py  norms.py
rldx/policy/: observation_validator.py  policy.py  policy_loader.py  policy_runtime.py  replay_policy.py  rldx_policy.py  server_client.py  session_registry.py  step_request.py
rldx/utils/: dist.py  initial_actions.py  qwen_vision_process.py  video_utils.py
run_scripts/data/: convert_h5_to_v2.py  convert_lerobot_multiple.sh  convert_lerobot_single.sh  physics_map.json  resize_dataset_videos.py  resize_dataset_videos.sh  task_map.json
run_scripts/deploy/: README.md  droid_deploy.py  droid_deploy.sh
run_scripts/eval/: submit.sh
run_scripts/eval/gr1_tabletop/: README.md  eval_gr1.sh  eval_gr1_all_task_slurm.sh  setup_gr1.sh  setup_gr1_slurm.sh
run_scripts/eval/libero/: README.md  eval_libero.sh  eval_libero_all_task_slurm.sh  eval_libero_slurm.sh  setup_libero.sh  setup_libero_slurm.sh
run_scripts/eval/libero_plus/: README.md  eval_libero_plus.sh  eval_libero_plus_all_task_slurm.sh  setup_libero_plus.sh  setup_libero_plus_slurm.sh
run_scripts/eval/robocasa_365/: README.md  eval_robocasa365.sh  eval_robocasa365_slurm.sh  setup_robocasa365.sh  setup_robocasa365_slurm.sh  task_sets.yaml
run_scripts/eval/robocasa_kitchen/: README.md  eval_robocasa.sh  eval_robocasa_all_task_slurm.sh  setup_robocasa.sh  setup_robocasa_slurm.sh
run_scripts/eval/simpler/: README.md  eval_simpler.sh  setup_simpler.sh
run_scripts/train/: README.md
run_scripts/train/benchmarks/: finetune_rldx1_gr1.sh  finetune_rldx1_libero.sh  finetune_rldx1_robocasa.sh  finetune_rldx1_robocasa365.sh  finetune_rldx1_simpler_google.sh  finetune_rldx1_simpler_widowx.sh
run_scripts/train/examples/: README.md  finetune.sh  midtrain_rldx1_allex.sh  midtrain_rldx1_droid.sh
(+90 files in other folders)
